--- a/JobiLandsMain/JobiLandsMain.vcxproj
+++ b/JobiLandsMain/JobiLandsMain.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="shadow.cpp" />
     <ClCompile Include="sound.cpp" />
     <ClCompile Include="title.cpp" />
+    <ClCompile Include="titlelogo.cpp" />
     <ClCompile Include="titleselect.cpp" />
     <ClCompile Include="tutorial.cpp" />
   </ItemGroup>
@@ -215,6 +216,7 @@
     <ClInclude Include="shadow.h" />
     <ClInclude Include="sound.h" />
     <ClInclude Include="title.h" />
+    <ClInclude Include="titlelogo.h" />
     <ClInclude Include="titleselect.h" />
     <ClInclude Include="tutorial.h" />
   </ItemGroup>
