--- a/JobiLandsMain/JobiLandsMain.vcxproj
+++ b/JobiLandsMain/JobiLandsMain.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="meshfield.cpp" />
     <ClCompile Include="meshwall.cpp" />
     <ClCompile Include="model.cpp" />
+    <ClCompile Include="motion.cpp" />
     <ClCompile Include="nofade.cpp" />
     <ClCompile Include="particle.cpp" />
     <ClCompile Include="pause.cpp" />
@@ -204,6 +205,7 @@
     <ClInclude Include="meshfield.h" />
     <ClInclude Include="meshwall.h" />
     <ClInclude Include="model.h" />
+    <ClInclude Include="motion.h" />
     <ClInclude Include="nofade.h" />
     <ClInclude Include="particle.h" />
     <ClInclude Include="pause.h" />
