--- a/JobiLandsMain/JobiLandsMain.vcxproj.filters
+++ b/JobiLandsMain/JobiLandsMain.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="titlelogo.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="motion.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2D_effect.h">
@@ -213,6 +216,9 @@
       <Filter>リソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="titlelogo.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="motion.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
