--- a/JobiLandsMain/JobiLandsMain.vcxproj.filters
+++ b/JobiLandsMain/JobiLandsMain.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="launch.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="scorecircle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="2D_effect.h">
@@ -224,7 +227,10 @@
     <ClInclude Include="launch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-     <ClInclude Include="score.h">
+    <ClInclude Include="score.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="scorecircle.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
